Name:          network-transport-cci
Version:       0.1
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     Parallel Scientific Labs, LLC.
Maintainer:    Facundo Domìnguez <facundo.dominguez@parsci.com>
Synopsis:      CCI instantation of Network.Transport.
Category:      Network

Source-Repository head
  Type: git
  Location: https://github.com/ps-labs/network-transport-cci

Library
  Build-Depends:   base >= 4.3 && < 5,
                   binary >= 0.6,
                   cci >= 0.2.0,
                   containers >= 0.4 && < 0.6,
                   data-accessor >= 0.2 && < 0.3,
                   network-transport >= 0.2 && < 0.4,
                   bytestring >= 0.9 && < 0.11
  Exposed-modules: Network.Transport.CCI
  Other-modules:   Network.Transport.CCI.Pool
  Extensions:      DeriveDataTypeable,
                   DeriveGeneric,
                   Rank2Types,
                   StandaloneDeriving
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  src

Executable CCITest2
  main-is: tests/CCITest2.hs
  ghc-options: -O -Wall -idist/build
  build-depends: base, bytestring, cci, binary, containers

Test-Suite TestCH
  Type:            exitcode-stdio-1.0
  Main-Is:         TestCH.hs
  Build-Depends:   ansi-terminal >= 0.5 && < 0.7,
                   base >= 4.4 && < 5,
                   binary >= 0.6,
                   bytestring >= 0.9 && < 0.11,
                   containers >= 0.4 && < 0.6,
                   network-transport-cci,
                   data-accessor >= 0.2 && < 0.3,
                   distributed-process >= 0.4 && < 0.5,
                   ghc-prim >= 0.2 && < 0.4,
                   mtl >= 2.0 && < 2.2,
                   network-transport >= 0.3 && < 0.5,
                   stm >= 2.3 && < 2.5,
                   old-locale >= 1.0 && < 1.1,
                   random >= 1.0 && < 1.1,
                   template-haskell >= 2.6 && < 2.9,
                   time >= 1.2 && < 1.5,
                   transformers >= 0.2 && < 0.4
  Extensions:      RankNTypes,
                   ScopedTypeVariables,
                   FlexibleInstances,
                   UndecidableInstances,
                   ExistentialQuantification,
                   GADTs,
                   GeneralizedNewtypeDeriving,
                   DeriveDataTypeable,
                   TemplateHaskell, BangPatterns,
                   CPP
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:  tests

Test-Suite TestCCI
  Type:            exitcode-stdio-1.0
  Main-Is:         TestCCI.hs
  Build-Depends:   ansi-terminal >= 0.5 && < 0.7,
                   base >= 4.3 && < 5,
                   binary >= 0.6,
                   bytestring >= 0.9 && < 0.11,
                   network-transport-cci,
                   containers >= 0.4 && < 0.6,
                   data-accessor >= 0.2 && < 0.3,
                   distributed-process >= 0.4 && < 0.5,
                   mtl >= 2.0 && < 2.2,
                   network-transport >= 0.3 && < 0.4,
                   random >= 1.0 && < 1.1
  Other-modules:   TestAuxiliary,
                   TestTransport,
                   Traced
  ghc-options:     -Wall -fno-warn-unused-do-bind -threaded -rtsopts -with-rtsopts=-N
  Extensions:      ExistentialQuantification,
                   FlexibleInstances,
                   DeriveDataTypeable,
                   RankNTypes,
                   OverlappingInstances,
                   CPP
  HS-Source-Dirs:  tests

Test-Suite test-ch-core
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.CH
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -threaded -debug -eventlog -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests

Test-Suite test-ch-closure
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Closure
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests

Test-Suite test-ch-stat
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Stats
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -debug -eventlog -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests


Test-Suite test-ch-mx
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Mx
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -debug -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests

Test-Suite test-ch-tracing
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Tracing
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -debug -eventlog -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests
