Name:          network-transport-cci
Version:       0.1
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     Parallel Scientific Labs, LLC.
Maintainer:    Facundo Domìnguez <facundo.dominguez@parsci.com>
Synopsis:      CCI instantation of Network.Transport.
Category:      Network

Source-Repository head
  Type: git
  Location: https://github.com/ps-labs/network-transport-cci

Library
  Build-Depends:   base >= 4.3 && < 5,
                   binary >= 0.6,
                   cci >= 0.2.0,
                   containers >= 0.4 && < 0.6,
                   data-accessor >= 0.2 && < 0.3,
                   network-transport >= 0.2 && < 0.4,
                   bytestring >= 0.9 && < 0.11
  Exposed-modules: Network.Transport.CCI
  Other-modules:   Network.Transport.CCI.ByteString
                   Network.Transport.CCI.Pool
  Extensions:      DeriveDataTypeable,
                   DeriveGeneric,
                   Rank2Types,
                   StandaloneDeriving
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  src

Test-Suite TestCCI
  Type:            exitcode-stdio-1.0
  Main-Is:         TestCCI.hs
  Build-Depends:   base >= 4.4 && < 5,
                   network-transport >= 0.2 && < 0.4,
                   network-transport-cci,
                   network-transport-tests >= 0.1.0.1 && < 0.2
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:  tests

Test-Suite test-ch-core
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.CH
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -threaded -debug -eventlog -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests

Test-Suite test-ch-closure
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Closure
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests

Test-Suite test-ch-stat
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Stats
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -debug -eventlog -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests


Test-Suite test-ch-mx
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Mx
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -debug -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests

Test-Suite test-ch-tracing
  Type:              exitcode-stdio-1.0
  Main-Is:           test-ch.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Tracing
  Build-Depends:     base >= 4.4 && < 5,
                     network-transport-cci,
                     distributed-process-tests >= 0.4,
                     network >= 2.3 && < 2.5,
                     network-transport >= 0.3 && < 0.4,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -debug -eventlog -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests
